tag: 0.2.1. Removed old files. Added 1 files.

--- a/3743-h/3743-h.htm
+++ b/3743-h/3743-h.htm
@@ -10,7 +10,7 @@
       The Writings of Thomas Paine, Volume IV. by Thomas Paine
     </title>
     <style type="text/css" xml:space="preserve">
-    
+
     body { margin:5%; background:#faebd0; text-align:justify}
     P { text-indent: 1em; margin-top: .25em; margin-bottom: .25em; }
     H1,H2,H3,H4,H5,H6 { text-align: center; margin-left: 15%; margin-right: 15%; }
@@ -27,7 +27,7 @@
                margin: 0; padding: 0; position: absolute; right: 1%;
                text-align: right;}
     pre     { font-style: italic; font-size: 90%; margin-left: 10%;}
-    
+
 </style>
   </head>
   <body>
@@ -2009,7 +2009,7 @@ Produced by Norman M. Wolcott, and David Widger
       rule of moral life will follow of course.
     </p>
     <p>
-      The allusions in job have all of them the same tendency with this Psalm;
+      The allusions in Job have all of them the same tendency with this Psalm;
       that of deducing or proving a truth that would be otherwise unknown, from
       truths already known.
     </p>
@@ -2354,7 +2354,7 @@ Produced by Norman M. Wolcott, and David Widger
       altogether erroneous. The human mind has a natural disposition to
       scientific knowledge, and to the things connected with it. The first and
       favourite amusement of a child, even before it begins to play, is that of
-      imitating the works of man. It builds bouses with cards or sticks; it
+      imitating the works of man. It builds houses with cards or sticks; it
       navigates the little ocean of a bowl of water with a paper boat; or dams
       the stream of a gutter, and contrives something which it calls a mill; and
       it interests itself in the fate of its works with a care that resembles
